--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "require-handlebars-plugin": "~0.4.0",
     "mocha": "~1.12.0",
     "chai": "~1.7.2",
-    "sinon": "~1.7.3"
+    "sinon": "~1.7.3",
+    "bootstrap-sass-official": "~3.1.1+2"
   },
   "devDependencies": {},
   "directory": "bower_components"
