--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "mocha": "~1.12.0",
     "chai": "~1.7.2",
     "sinon": "~1.7.3",
-    "bootstrap-sass-official": "~3.1.1+2"
+    "bootstrap-sass-official": "~3.1.1+2",
+    "x-editable": "~1.5.1"
   },
   "devDependencies": {},
   "directory": "bower_components"
