--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "shopping-list",
   "version": "0.0.1",
   "dependencies": {
-    "express": "~3.2.4",
-    "request": "~2.21.0",
     "async": "~0.2.8",
     "baucis": "~0.4.6",
+    "express": "~3.2.4",
     "express-hbs": "~0.2.0",
+    "grunt-contrib-cssmin": "^0.9.0",
+    "request": "~2.21.0",
     "underscore": "~1.4.4"
   },
   "devDependencies": {
