--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "feathers": "^0.4.0",
     "grunt": "~0.4.1",
     "grunt-bower-requirejs": "~0.4.1",
+    "grunt-connect-proxy": "^0.1.10",
     "grunt-contrib-clean": "0.4.0",
     "grunt-contrib-coffee": "~0.6.6",
     "grunt-contrib-compass": "~0.2.0",
